--- a/css/main.css
+++ b/css/main.css
@@ -25,6 +25,7 @@ a{
 	width:100%;
 	height:44px;
 	padding:0 1rem;
+	z-index:10
 }
 .local-nav{
 	position: absolute;
@@ -33,7 +34,8 @@ a{
 	width:100%;
 	height:52px;
 	border-bottom:1px solid #ddd;
-	padding:0 1rem
+	padding:0 1rem;
+	z-index: 11;
 }
 .global-nav-links,
 .local-nav-links{
@@ -186,8 +188,8 @@ a{
 
 .sticky-elem{
 	display:none;
-	position: fixed;
 	/* top:0; */
+	position:fixed;
 	left:0;
 	width:100%
 }
@@ -196,4 +198,7 @@ a{
 #show-scene-2 #scroll-section-2 .sticky-elem,
 #show-scene-3 #scroll-section-3 .sticky-elem{
 	display:block
+}
+.sticky-elem-canvas{
+	top:0;
 }
